# deney2

./: CMakeLists.txt  README.md  deney2.cpp  deney2.sln  deney2.vcxproj  deney2.vcxproj.filters  main.cpp
